Fix: project-behance no gap

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1339,9 +1339,9 @@ body.light .navbar {
   gap: 0;
   border-radius: 14px;
   overflow: hidden;
-  max-width: 1600px;
+  max-width: 1200px;
   /* limita largura */
-  margin: 0 0;
+  margin: 0 auto;
   /* centraliza */
 }
 
